# moderngl_docs_mcp

./: .gitignore  README.md  moderngl_code_docs.txt  moderngl_info_docs.txt  pyproject.toml
docs/architecture/: ARCHITECTURE.md  BENCHMARKS.md
docs/benchmarks/: queries.yaml  results_raw.csv
scripts/: run_benchmarks.py
src/moderngl_docs_mcp/: __init__.py  server.py
src/moderngl_docs_mcp/ingestion/: __init__.py  cli.py  ingest.py  parser.py
src/moderngl_docs_mcp/retrieval/: __init__.py  fusion.py  query.py
src/moderngl_docs_mcp/services/: __init__.py  search.py
src/moderngl_docs_mcp/storage/: __init__.py  db.py  schema.sql
tests/: _stdio_test_entrypoint.py  test_fusion.py  test_ingest.py  test_parser.py  test_query.py  test_search.py  test_server_stdio.py
